--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   dio: ^5.1.2
+  intl: ^0.18.1
+  table_sticky_headers: ^2.0.5
 
 dev_dependencies:
   flutter_test:
