--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   dio: ^5.1.2
   intl: ^0.18.1
   table_sticky_headers: ^2.0.5
+  otp_text_field: ^1.1.3
+  firebase_core: ^2.12.0
+  firebase_auth: ^4.6.0
+  cloud_firestore: ^4.7.0
+  chat_bubbles: ^1.4.1
 
 dev_dependencies:
   flutter_test:
